# Memes-Store

./: .gitignore  docker-compose.yml  pyproject.toml
mem_api/: Dockerfile  alembic.ini  pyproject.toml
mem_api/migrations/: env.py
mem_api/migrations/versions/: 2d787e411da5_initial_migrations.py  6ca954103239_initial_migrations.py
mem_api/src/app/: config.py  crud.py  databases.py  main.py  models.py  routers.py  schemas.py
mem_store/: Dockerfile  pyproject.toml
mem_store/src/app/: config.py  minio_client.py  routers.py
