[tool.poetry]
name = "mem-api"
version = "0.1.0"
description = ""
authors = ["Ira <ira.ivashko.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pydantic = "^2.10.3"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
